@@ -143,13 +143,6 @@ def emotions(entry):
 	
 	return entry
 
-@register.simple_tag
-def can_show_twitter():
-	"Returns True if Twitter credentials are filled in the settings.py"
-	if settings.TWITTER_USERNAME != "" and settings.TWITTER_PASSWORD != "":
-		return True
-	return False
-
 @register.inclusion_tag("blog/twitter.html")
 def twitter():
 	"""
@@ -158,6 +151,8 @@ def twitter():
 	"""
 	from raptiye.contrib import twitter
 	
-	api = twitter.Api(username=settings.TWITTER_USERNAME, password=settings.TWITTER_PASSWORD)
-	latest_updates_of_user = [status.GetText() for status in api.GetUserTimeline()]
-	return {"latest_updates": latest_updates_of_user[:settings.TWITTER_LIMIT]}
+	if settings.TWITTER_USERNAME != "" and settings.TWITTER_PASSWORD != "":
+		api = twitter.Api(username=settings.TWITTER_USERNAME, password=settings.TWITTER_PASSWORD)
+		latest_updates_of_user = [status.GetText() for status in api.GetUserTimeline()]
+		return {"latest_updates": latest_updates_of_user[:settings.TWITTER_LIMIT]}
+	return {"latest_updates": None}
